export const snapshot = {};

snapshot[`sqlr ClickHouse 1`] = `
{
  code: 0,
  output: "Query executed in: *ms
Rows affected: *
[ { test: 1 } ]
",
  outputError: "",
  sqlrCommand: 'sqlr query -t clickhouse -s "http://world:world123@localhost:8123?database=world" "SELECT 1 as test"',
}
`;

snapshot[`sqlr ClickHouse 2`] = `
{
  code: 0,
  output: 'Query executed in: *ms
Rows affected: *
[
  { code: "ABW", name: "Aruba" },
  { code: "AFG", name: "Afghanistan" },
  { code: "AGO", name: "Angola" }
]
',
  outputError: "",
  sqlrCommand: 'sqlr query -t clickhouse -s "http://world:world123@localhost:8123?database=world" "SELECT code, name FROM country ORDER BY code LIMIT 3"',
}
`;

snapshot[`sqlr ClickHouse 3`] = `
{
  code: 0,
  output: "Query executed in: *ms
Rows affected: *
  ┌──────┬─────────────┐
  │ code │ name        │
  ├──────┼─────────────┤
  │ ABW  │ Aruba       │
  ├──────┼─────────────┤
  │ AFG  │ Afghanistan │
  ├──────┼─────────────┤
  │ AGO  │ Angola      │
  └──────┴─────────────┘
",
  outputError: "",
  sqlrCommand: 'sqlr query -t clickhouse -s "http://world:world123@localhost:8123?database=world" "SELECT code, name FROM country ORDER BY code LIMIT 3" --table',
}
`;

snapshot[`sqlr ClickHouse 4`] = `
{
  code: 0,
  output: "Query executed in: *ms
Rows affected: *
code,name
ABW,Aruba
AFG,Afghanistan
AGO,Angola
",
  outputError: "",
  sqlrCommand: 'sqlr query -t clickhouse -s "http://world:world123@localhost:8123?database=world" "SELECT code, name FROM country ORDER BY code LIMIT 3" --compact',
}
`;

snapshot[`sqlr ClickHouse 5`] = `
{
  code: 0,
  output: "SQL to execute:
SELECT 1 as input_file_test;

Query executed in: *ms
Rows affected: *
[ { input_file_test: 1 } ]
",
  outputError: "",
  sqlrCommand: 'sqlr query -t clickhouse -s "http://world:world123@localhost:8123?database=world" test-query.sql',
}
`;

snapshot[`sqlr ClickHouse 6`] = `
{
  code: 0,
  output: "SQL to execute:
SELECT 1 as test;

Query executed in: *ms
Rows affected: *
[ { test: 1 } ]
",
  outputError: "",
  sqlrCommand: 'sqlr query -t clickhouse -s "http://world:world123@localhost:8123?database=world" test-query-vars.sql -i "col: 1" -i "alias: test"',
}
`;

snapshot[`sqlr ClickHouse 7`] = `
{
  code: 0,
  output: "Query executed in: *ms
Rows affected: *
Results saved to /tmp/sqlr-test-output-clickhouse.json
",
  outputError: "",
  sqlrCommand: 'sqlr query -t clickhouse -s "http://world:world123@localhost:8123?database=world" "SELECT 1 as test" -o /tmp/sqlr-test-output-clickhouse.json',
}
`;

snapshot[`sqlr ClickHouse 8`] = `
{
  code: 0,
  output: 'Database schema:
[
  {
    schema: "world",
    name: "country",
    columns: [
      { name: "code", type: "String", nullable: false },
      { name: "name", type: "String", nullable: false },
      { name: "continent", type: "String", nullable: false },
      { name: "region", type: "String", nullable: false },
      { name: "surface_area", type: "Float32", nullable: false },
      { name: "indep_year", type: "Int16", nullable: true },
      { name: "population", type: "UInt32", nullable: false },
      { name: "life_expectancy", type: "Float32", nullable: true },
      { name: "gnp", type: "Decimal(10, 2)", nullable: true },
      { name: "gnp_old", type: "Decimal(10, 2)", nullable: true },
      { name: "local_name", type: "String", nullable: false },
      { name: "government_form", type: "String", nullable: false },
      { name: "head_of_state", type: "String", nullable: true },
      { name: "capital", type: "UInt32", nullable: true },
      { name: "code2", type: "String", nullable: false }
    ]
  },
  {
    schema: "world",
    name: "country_flag",
    columns: [
      { name: "code2", type: "String", nullable: false },
      { name: "emoji", type: "String", nullable: false },
      { name: "unicode", type: "String", nullable: true }
    ]
  },
  {
    schema: "world",
    name: "country_language",
    columns: [
      { name: "country_code", type: "String", nullable: false },
      { name: "language", type: "String", nullable: false },
      { name: "is_official", type: "UInt8", nullable: false },
      { name: "percentage", type: "Float32", nullable: false }
    ]
  }
]
',
  outputError: "",
  sqlrCommand: 'sqlr describe -t clickhouse -s "http://world:world123@localhost:8123?database=world" -f "country"',
}
`;

snapshot[`sqlr ClickHouse 9`] = `
{
  code: 0,
  output: "Database schema:
  ┌──────────────────────────┐
  │ world.country            │
  ├──────────────────────────┤
  │ code String              │
  ├──────────────────────────┤
  │ name String              │
  ├──────────────────────────┤
  │ continent String         │
  ├──────────────────────────┤
  │ region String            │
  ├──────────────────────────┤
  │ surface_area Float32     │
  ├──────────────────────────┤
  │ indep_year? Int16        │
  ├──────────────────────────┤
  │ population UInt32        │
  ├──────────────────────────┤
  │ life_expectancy? Float32 │
  ├──────────────────────────┤
  │ gnp? Decimal(10, 2)      │
  ├──────────────────────────┤
  │ gnp_old? Decimal(10, 2)  │
  ├──────────────────────────┤
  │ local_name String        │
  ├──────────────────────────┤
  │ government_form String   │
  ├──────────────────────────┤
  │ head_of_state? String    │
  ├──────────────────────────┤
  │ capital? UInt32          │
  ├──────────────────────────┤
  │ code2 String             │
  └──────────────────────────┘
  ┌────────────────────┐
  │ world.country_flag │
  ├────────────────────┤
  │ code2 String       │
  ├────────────────────┤
  │ emoji String       │
  ├────────────────────┤
  │ unicode? String    │
  └────────────────────┘
  ┌────────────────────────┐
  │ world.country_language │
  ├────────────────────────┤
  │ country_code String    │
  ├────────────────────────┤
  │ language String        │
  ├────────────────────────┤
  │ is_official UInt8      │
  ├────────────────────────┤
  │ percentage Float32     │
  └────────────────────────┘
",
  outputError: "",
  sqlrCommand: 'sqlr describe -t clickhouse -s "http://world:world123@localhost:8123?database=world" -f "country" --table',
}
`;

snapshot[`sqlr ClickHouse 10`] = `
{
  code: 0,
  output: "Database schema:
world.country [ code String, name String, continent String, region String, surface_area Float32, indep_year? Int16, population UInt32, life_expectancy? Float32, gnp? Decimal(10, 2), gnp_old? Decimal(10, 2), local_name String, government_form String, head_of_state? String, capital? UInt32, code2 String ]
world.country_flag [ code2 String, emoji String, unicode? String ]
world.country_language [ country_code String, language String, is_official UInt8, percentage Float32 ]
",
  outputError: "",
  sqlrCommand: 'sqlr describe -t clickhouse -s "http://world:world123@localhost:8123?database=world" -f "country" --compact',
}
`;

snapshot[`sqlr ClickHouse 11`] = `
{
  code: 0,
  output: "Database schema:
world.country
world.country_flag
world.country_language
",
  outputError: "",
  sqlrCommand: 'sqlr describe -t clickhouse -s "http://world:world123@localhost:8123?database=world" -f "country" --tables-only',
}
`;

snapshot[`sqlr ClickHouse 12`] = `
{
  code: 0,
  output: "ClickHouseError: Syntax error: failed at position 1 (INVALID): INVALID SQL QUERY.
",
  outputError: '[*][ERROR][@clickhouse/client][Connection] Command: HTTP request error. 
Arguments: {
  operation: "Command",
  connection_id: "*",
  query_id: "*",
  with_abort_signal: false,
  session_id: undefined,
  clickhouse_settings: {}
} 
Caused by: ClickHouseError: Syntax error: failed at position 1 (INVALID): INVALID SQL QUERY. Expected one of: *. 
    at *
  code: "62",
  type: "SYNTAX_ERROR"
}
',
  sqlrCommand: 'sqlr query -t clickhouse -s "http://world:world123@localhost:8123?database=world" "INVALID SQL QUERY"',
}
`;
